# GalacticMart_backend

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2025-03-16-092425_create_products/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
